tools/mouse_stubs.h

 typedef struct b B;
 typedef struct p P;
typedef struct options OPTIONS;
ptrdiff_t utf8_encode(char *buf, int c);
int from_uni(struct charmap *map, int c);
int to_uni(struct charmap *map, int c);
P *pgoto(P *p, off_t loc);